--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,5 @@
-node_modules
-/out
-
-.env
-.env.production
-concatenated-output.ts
-embedding-cache.json
-
-.DS_Store
-
-dist/
-# Allow models directory but ignore model files
-models/*.gguf
-
-cookies.json
-
-db.sqlite
-searches/
-tweets/
-
-*.gguf
-*.onnx
-*.wav
-*.mp3
-
-logs/
-
-test-report.json
-content_cache/
-test_data/
-tokencache/
-tweetcache/
-twitter_cookies.json
-timeline_cache.json
-
-*.sqlite
-
-characters/
-
-packages/core/src/providers/cache
-packages/core/src/providers/cache/*
-cache/*
+# Character secrets
+src/characters/mogimusprime.json
+src/characters/**/mogimusprime.json
+!src/characters/*.template.json
+!src/characters/**/*.template.json
